# RaytracingEngineMT

./: .clang-format  .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AccelerationStructure.cpp  Buffer.cpp  Buffer.h  CMakeLists.txt  ComputePass.cpp  ComputePass.h  Definitions.cpp  DescriptorSetAllocator.h  Image.cpp  Image.h  Model.cpp  Pass.cpp  ProcessingPipeline.cpp  RaytracePass.h  Scene.cpp  Scene.h  TextureCache.cpp  TextureCache.h  VulkanContext.h  Window.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dipterv_rt.sln  dipterv_rt.vcxproj  dipterv_rt.vcxproj.filters  glfw_include.h  main.cpp  stb_image.h
shaders/: build.bat  build.py
shaders/1_naive/raytracing/: pathtrace.rgen
shaders/2_cos_brdf_sampling/raytracing/: pathtrace.rgen
shaders/3_mis_brdf_sampling/raytracing/: pathtrace.rgen
shaders/4_russian_roulette/raytracing/: pathtrace.rgen
shaders/5_light_sampling/raytracing/: pathtrace.rgen
shaders/6_light_sampling_ris/raytracing/: pathtrace.rgen
shaders/7_final/compute/: blend.comp  blur_diffuse.comp  copy_diffuse.comp
shaders/7_final/raytracing/: diffuse.rgen  initial.rgen
shaders/8_path_regularization/raytracing/: pathtrace.rgen
shaders/9_blue_noise/raytracing/: pathtrace.rgen
shaders/compute/: accumulate.comp  copy_prev.comp  sky.comp  tonemap.comp
shaders/lib/: brdf2.glsl  colors.glsl  conversions.glsl  material.glsl  payload.glsl  quaternions.glsl  rand.glsl  sampling.glsl  spherical_harmonics.glsl  tonemap.glsl  uniform_bindings.glsl  uniforms.glsl  utils.glsl
shaders/raytracing/: firstray.rgen  gltf.rahit  gltf.rchit  gltf.rmiss
shaders/rt/: bindings.glsl  buffers.glsl  objdesc.glsl  vertex.glsl
src/: json.hpp
src/content/: AccelerationStructure.h  Model.h
src/pipeline/: ProcessingPipeline.h  expression_parsing.h
src/pipeline/pass/: Pass.h  RaytracePass.cpp
src/vulkan/: DescriptorSetAllocator.cpp  VulkanContext.cpp  Window.cpp  util.h
